# voxelizer-rs

./: CONTRIBUTING.md  Cargo.toml  Cargo.toml.orig  Cargo.toml.patch  README.md  dist-workspace.toml  patch.diff  patch2.diff  patch3.diff  patch4.diff  readme.MD  test_extend_final.patch  test_loop_flat_map.patch  test_ray.rs
.github/workflows/: ci.yml  release.yml
.jules/: bolt.md
benches/: load_obj_bench.rs  raycast_bench.rs  voxelize_bench.rs
src/: lib.rs  lib.rs.orig  lib.rs.rej  main.rs
tests/: test_exporters.rs  test_sdf_invariants.rs
