[package]
name = "voxelizer-rs"
version = "0.2.1"
edition = "2024"
description = "A high-performance, parallel CPU voxelizer that converts STL/OBJ meshes into particle clouds."
license = "MIT"
keywords = ["voxel", "mesh", "particles"]
categories = ["science", "simulation", "command-line-utilities"]
repository = "https://github.com/lhemerly/voxelizer-rs/"

[dependencies]
anyhow = "1.0.101"
bincode = "=1.3.3"
clap = {version="4.5.59", features = ["derive"]}
indicatif = "0.18.4"
nalgebra = "0.32.6"
parry3d = { package = "parry3d-f64", version = "0.13" } 
rayon = "1.11.0"
serde = {version="1.0.228", features =["derive"]}
stl_io = "0.10.0"
tobj = "4.0.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "voxelize_bench"
harness = false
